address minor display issues on Safari browser

--- a/web/src/app/components/sda-site-header/sda-site-header.scss
+++ b/web/src/app/components/sda-site-header/sda-site-header.scss
@@ -103,13 +103,20 @@ body {
                input {
                   flex: 1;
                   background: transparent;
-                  color: inherit;
                   border: 1px solid #4e534d;
                   border-right: none;
                   border-radius: 8px 0 0 8px;
                   color: $cream;
+                  font-family: inherit;
+                  font-size: inherit;
                   height: (5/8 * $header-height);
                   padding: 0 0.5rem;
+                  margin: 0;
+
+                  &[type=search] {
+                     -moz-appearance: none;
+                     -webkit-appearance: none;
+                  }
 
                   @media only screen and (min-width: 51em) {
                      max-width: 200px;
@@ -123,6 +130,7 @@ body {
                   color: $cream;
                   height: (5/8 * $header-height);
                   transition: background-color 0.4s;
+                  margin: 0;
 
                   &:hover, &:focus, &:active {
                      background-color: lighten($darkBrown, 10%)
