--- a/web/src/app/home/components/sda-nav/sda-nav.scss
+++ b/web/src/app/home/components/sda-nav/sda-nav.scss
@@ -166,7 +166,7 @@
                   line-height: 1.2;
                   margin: 0 2.5rem 0 0;
                   padding: 0 0 1.25rem;
-                  min-width: auto;
+                  min-width: 0;
                }
 
                @media only all and (min-width: 60em) {
