--- a/web/src/app/media/main/main.scss
+++ b/web/src/app/media/main/main.scss
@@ -20,13 +20,26 @@
          display: flex;
          flex-direction: row;
          flex-wrap: wrap;
+         justify-content: center;
 
          li {
             padding: 1rem;
-            min-width: 200px;
-            max-width: 25%;
             font-size: 0.9em;
+            width: 100%;
+            max-width: 320px;
             line-height: 1.3;
+
+            @media screen and (min-width: $screen-sm-min) {
+               width: 50%;
+            }
+
+            @media screen and (min-width: $screen-md-min) {
+               width: 33%;
+            }
+
+            @media screen and (min-width: $screen-lg-min) {
+               width: 25%;
+            }
 
             > a {
                color: inherit;
